--- a/option1_heroes.ipynb
+++ b/option1_heroes.ipynb
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
        "0          2379.77  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,10 +268,7 @@
     "#print('Total Revenue is ${}'.format(total_revenue))\n",
     "#Summary Data Frame\n",
     "print('PURCHASING ANALYSIS SUMMARY:')\n",
-    "summary_df = pd.DataFrame({\"Total Unique Items\":[unique_items],\n",
-    "                           \"Avg Purchase Price $\":[average_purchaseprice], \n",
-    "                           \"Total # of Purchases\": [num_purchases], \n",
-    "                           \"Total Revenue $\": [total_revenue]})\n",
+    "summary_df = pd.DataFrame({\"Total Unique Items\":[unique_items],\"Avg Purchase Price $\":[average_purchaseprice],  \"Total # of Purchases\": [num_purchases],  \"Total Revenue $\": [total_revenue]})\n",
     "\n",
     "\n",
     "summary_df"
@@ -347,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +419,7 @@
        "Other / Non-Disclosed                           1.36  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,9 +457,7 @@
     "\n",
     "\n",
     "# Create data frame with obtained values\n",
-    "purchasing_analysis_df = pd.DataFrame({\"Purchase Count\": num_purchases_by_gender, \"Total Purchase $\": gender_totalpurchase,\n",
-    "                                      \"Avg Purchase Price $\": gender_average_purchaseprice, \n",
-    "                                       \"Avg Purchase Count per Player\": gender_average_num_purchases_perPerson})\n",
+    "purchasing_analysis_df = pd.DataFrame({\"Purchase Count\": num_purchases_by_gender, \"Total Purchase $\": gender_totalpurchase, \"Avg Purchase Price $\": gender_average_purchaseprice,  \"Avg Purchase Count per Player\": gender_average_num_purchases_perPerson})\n",
     "\n",
     "# Format the data frame with no index name in the corner\n",
     "purchasing_analysis_df.index.name = None\n",
